# ChangeLog for dev-ruby/rake
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*rake-10.1.0 (18 Oct 2013)

  18 Oct 2013;  <michel.boaventura@gmail.com> +files/rake-10.1.0-ruby-1.8-fix.patch,
  +files/rake.bash-completion, +metadata.xml, +rake-10.1.0.ebuild:
  Update rake to 10.1.0 and fix support for ruby 1.8.7