@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rake
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jan 2014; Hans de Graaff <graaff@gentoo.org> rake-10.1.0.ebuild:
+  EAPI=5. Add ruby21. Drop session and flexmock dependencies. They are
+  mentioned in the documentation but not actually used.
 
 *rake-10.1.0 (18 Oct 2013)
 
